--- a/style.css
+++ b/style.css
@@ -9,8 +9,12 @@
 body {
   font-size: 15px;
   font-family: 'Poppins', Arial, sans-serif;
-  background-color: hsl(210, 60%, 98%);
+  background-color: #fbfbfb;
   color: hsl(210, 20%, 20%);
+}
+
+main {
+  margin: 5rem;
 }
 
 h1 {
@@ -30,6 +34,8 @@ h1 span:last-child {
   font-size: 16px;
   text-align: center;
   margin: 10px 0;
+  width: 560px;
+  margin: 0 auto;
 }
 
 .card-wrapper {
@@ -96,6 +102,10 @@ img {
     align-items: center;
     position: static;
     gap: 20px;
+  }
+
+  .description {
+    width: 100%;
   }
 
   .card {
