--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ body {
   font-size: 15px;
   font-family: 'Poppins', Arial, sans-serif;
   background-color: #fbfbfb;
-  color: hsl(210, 20%, 20%);
+  color: #29333d;
 }
 
 main {
-  margin: 5rem;
+  margin: 3rem 5rem 5rem;
 }
 
 h1 {
@@ -42,7 +42,7 @@ h1 span:last-child {
   position: relative;
   width: 100%;
   max-width: 1000px;
-  margin: 80px auto;
+  margin: 0 auto;
   min-height: 400px;
 }
 
@@ -53,8 +53,8 @@ h1 span:last-child {
   background: white;
   border-radius: 5px;
   padding: 20px;
-  width: 300px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  width: 330px;
+  box-shadow: 4px 8px 15px rgba(0, 0, 0, 0.185);
 }
 
 img {
@@ -75,13 +75,13 @@ img {
 
 .supervisor {
   top: 120px;
-  left: 1.5rem;
+  left: -1rem;
   border-top: 4px solid hsl(180, 62%, 55%);
 }
 
 .calculator {
   top: 120px;
-  right: 1.5rem;
+  right: -1rem;
   border-top: 4px solid hsl(212, 86%, 64%);
 }
 
@@ -105,7 +105,7 @@ img {
   }
 
   .description {
-    width: 100%;
+    width: 90%;
   }
 
   .card {
